# lost-and-found

./: .flaskenv  .gitignore  DEBUGGING.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  QUICK_DEPLOY.md  README.md  RENDER_STORAGE_FIX.md  main.py  pyproject.toml  railway.json  render.yaml  requirements.txt  wsgi.py
client/: README.md  camera.css  camera.html  index.html  package-lock.json  package.json  search.css  search.html  shared.css  utils.js  vite.config.js
client/src/: App.css  App.tsx  index.css
client/src/components/: Detector.css  Detector.tsx
client/static/: README.md  camera.css  camera.html  metadata.js  search.css  search.html
detector/: main.py
server/: app.py
server/detector/: main.py
server/routes/: detector_routes.py  image_routes.py  item_routes.py  upload.py
server/utils/: detector_utils.py  metadata_utils.py  openai_utils.py  storage_utils.py
