[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["server"]

[project]
name = "lost-and-found"
version = "0.1.0"
description = "Lost and Found Description"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flask>=3.0.0",
    "openai>=2.6.1",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
start = "server.app:main"
